# qkjudge

./: .dockerignore  .env.example  .env.k8s.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  compose.yaml  docker-entrypoint.sh  env.sh.template  env.showcase.json.template  memo.md  mise.toml  readme.md  showcase.yaml  sqlx-data.json
.claude/skills/migrate-task/: SKILL.md
.github/: actionlint.yaml
.github/workflows/: README.md  _rust-checks.yml  ci.yml  deploy.yml
deploy/k3s/: README.md
deploy/k3s/base/: app-deployment.yaml  app-service.yaml  backup-cronjob.yaml  backup-pvc.yaml  ingress.yaml  (+4 more)
docs/: MIGRATION.md
migration/: jdoodle-response-ce.json  jdoodle-response-success.json
migration/legacy-snapshot/: README.md  meta.json  problems.json  scrape.py  submissions.json  tasks.json
migrations/: migrate.sh  v0.1.0.sql  v0.2.0.sql  v0.2.1.sql  v0.2.2.sql  v0.2.3.sql  v0.2.4.sql  v0.3.0.sql  v0.3.1.sql  v1.0.1.sql  v1.1.0.sql  v1.2.0.sql  v1.2.1.sql  v1.2.2.sql  v1.2.3.sql
src/: languages.rs  legacy_store.rs  main.rs
src/routes/: execute.rs  get_execute.rs  get_hello.rs  get_index.rs  get_legacy_submissions.rs  get_legacy_submissions_sid.rs  get_legacy_tasks_tid.rs  get_ping.rs  get_problems.rs  get_problems_pid.rs  get_submissions.rs  get_submissions_sid.rs  get_tasks_tid.rs  get_whoami.rs  hello.rs  index.rs  login.rs  logout.rs  mod.rs  options_any.rs  ping.rs  post_execute.rs  post_fetch_problems.rs  post_login.rs  post_logout.rs  post_problems.rs  post_signup.rs  post_submit.rs  preflight.rs  problem_new.rs  problems.rs  problems_pid.rs  put_submissions_sid.rs  signup.rs  submissions.rs  submissions_sid.rs  submit.rs  tasks_tid.rs  whoami.rs
tasks/doing/: TASK-003-k3s-prod-staging.md  TASK-006-frontend-cutover.md
tasks/done/: TASK-000-repo-hygiene-prek.md  TASK-001-legacy-snapshot.md  TASK-002-containerization-prep.md  TASK-003-k3s-prod-staging.md  TASK-004-cicd-runner.md  TASK-005-legacy-endpoint.md  TASK-006-frontend-cutover.md  TASK-007-jdoodle-ce-fix.md
tasks/todo/: TASK-000-repo-hygiene-prek.md  TASK-001-legacy-snapshot.md  TASK-002-containerization-prep.md  TASK-003-k3s-prod-staging.md  TASK-004-cicd-runner.md  TASK-005-legacy-endpoint.md  TASK-006-frontend-cutover.md  TASK-007-jdoodle-ce-fix.md  TASK-008-branch-switchable-staging.md
(+354 files in other folders)
