[package]
name = "qkjudge"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-cors = "0.6.2"
actix-rt = "2.7.0"
tokio = { version="1.21.0", features=["rt-multi-thread", "macros", "sync"] }
actix-identity = "0.4"
env_logger = "0.9.0"
futures-util = "0.3.23"
log = "0.4.17"
serde = { version = "^1.0.101", features = ["derive"] } # json に serialize, deserialize するやつ
serde_json = "1.0.85"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "mysql", "time", "chrono" ] } # db 操作するやつ
bcrypt = "0.13" # ハッシュ化するやつ
rand = "0.8"
reqwest = { version = "0.11.11", features = ["blocking", "json"] } # http クライアント
yaml-rust = "0.4" # yaml パースするやつ
chrono = "0.4.22" # 日時を扱うやつ
time = { version = "0.3.14", features = ["serde"] }
